Fix QP shouldn't be truncated when not in the timeline

--- a/src/components/status.css
+++ b/src/components/status.css
@@ -169,7 +169,7 @@
   flex-direction: column;
   gap: 8px;
 }
-.status:not(.large) {
+.timeline-deck .status:not(.large) {
   .content.truncated ~ .status-card-container {
     display: none;
   }
